# -*- Mode: Makefile; -*-
#
# (C) 2017 by Argonne National Laboratory.
#     See COPYRIGHT in top-level directory.
#

ACLOCAL_AMFLAGS =
AM_CPPFLAGS =

lib_LTLIBRARIES = liblmdbio.la

liblmdbio_la_LDFLAGS = ${liblmdbio_so_versionflags}
liblmdbio_la_SOURCES =

noinst_HEADERS =
include_HEADERS =

include src/Makefile.mk
